k8s/03-traefik-middlewares.yaml
# =============================================================================
# k8s/03-traefik-middlewares.yaml
# Middlewares globales para Odoo (Headers de seguridad proxy, Buffering)
# =============================================================================
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: odoo-headers
  namespace: aeisoftware
spec:
  headers:
    # Fuerza paso cabeceras X-Forwarded originarias de Cloudflare
    customRequestHeaders:
      X-Forwarded-Proto: "https"
    # Prevención XSS y control base de iframes
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: odoo-headers
  namespace: odoo-admin
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsSeconds: 31536000
